# libwatchfish

./: CMakeLists.txt  watchfish_config.h.in
cmake/: FindMprisQt.cmake  FindTimedQt.cmake
